# external_mixin

./: .travis.yml  Cargo.toml  README.md
examples/: external_mixin_failures.rs  rust_mixin_failures.rs
external_mixin/: Cargo.toml
external_mixin/src/: lib.rs
rust_mixin/: Cargo.toml
rust_mixin/src/: lib.rs
src/: lib.rs  parser_any_macro.rs
tests/: external_mixin_tests.rs  rust_mixin_tests.rs
